--- a/database-connect/package.json
+++ b/database-connect/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "mysql2": "^3.16.0",
     "next": "16.1.1",
     "react": "19.2.3",
